--- a/Scrap/signup_screen.css
+++ b/Scrap/signup_screen.css
@@ -1,359 +1,359 @@
 /* Signup frame */
 
-position: relative;
-width: 375px;
-height: 667px;
+position: relative,
+width: 375,
+height: 667,
 
-background: #FFFFFF;
+backgroundColor: #FFFFFF,
 
 
 /* rectangle_header */
 
-position: absolute;
-width: 375px;
-height: 70px;
-left: 0px;
-top: -4px;
+position: 'absolute',
+width: 375,
+height: 70,
+left: 0,
+top: -4,
 
-background: #2D9CDB;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+backgroundColor: #2D9CDB,
+box-shadow: 0 4 4 rgba(0, 0, 0, 0.25),
 
 
 /* Create Account */
 
-position: absolute;
-width: 184px;
-height: 33px;
-left: 95px;
-top: 17px;
+position: 'absolute',
+width: 184,
+height: 33,
+left: 95,
+top: 17,
 
-font-family: Open Sans;
-font-style: normal;
-font-weight: bold;
-line-height: normal;
-font-size: 24px;
-text-align: center;
+fontFamily: 'Cochin',
+fontStyle: 'normal',
+fontWeight: 'bold',
+lineHeight: 'normal',
+fontSize: 24,
+textAlign: 'center',
 
-color: #F2F2F2;
+color: #F2F2F2,
 
 
 /* Password_line */
 
-position: absolute;
-width: 265.02px;
-height: 0px;
-left: 55.99px;
-top: 304.48px;
+position: 'absolute',
+width: 265.02,
+height: 0,
+left: 55.99,
+top: 304.48,
 
-border: 2px solid #2D9CDB;
+border: 2 solid #2D9CDB,
 
 
 /* Email_line */
 
-position: absolute;
-width: 265.02px;
-height: 0px;
-left: 55.99px;
-top: 252.48px;
+position: 'absolute',
+width: 265.02,
+height: 0,
+left: 55.99,
+top: 252.48,
 
-border: 2px solid #2D9CDB;
+border: 2 solid #2D9CDB,
 
 
 /* Name_line */
 
-position: absolute;
-width: 265.02px;
-height: 0px;
-left: 55.99px;
-top: 207.48px;
+position: 'absolute',
+width: 265.02,
+height: 0,
+left: 55.99,
+top: 207.48,
 
-border: 2px solid #2D9CDB;
+border: 2 solid #2D9CDB,
 
 
 /* email_text */
 
-position: absolute;
-width: 180px;
-height: 25px;
-left: 97px;
-top: 227px;
+position: 'absolute',
+width: 180,
+height: 25,
+left: 97,
+top: 227,
 
-font-family: Open Sans;
-font-style: normal;
-font-weight: bold;
-line-height: normal;
-font-size: 18px;
-text-align: center;
+fontFamily: 'Cochin',
+fontStyle: 'normal',
+fontWeight: 'bold',
+lineHeight: 'normal',
+fontSize: 18,
+textAlign: 'center',
 
-color: #F2F2F2;
-border: 0.5px solid #000000;
+color: #F2F2F2,
+border: 0.5 solid #000000,
 
 
 /* name_text */
 
-position: absolute;
-width: 52px;
-height: 25px;
-left: 161px;
-top: 181px;
+position: 'absolute',
+width: 52,
+height: 25,
+left: 161,
+top: 181,
 
-font-family: Open Sans;
-font-style: normal;
-font-weight: bold;
-line-height: normal;
-font-size: 18px;
-text-align: center;
+fontFamily: 'Cochin',
+fontStyle: 'normal',
+fontWeight: 'bold',
+lineHeight: 'normal',
+fontSize: 18,
+textAlign: 'center',
 
-color: #F2F2F2;
-border: 0.5px solid #000000;
+color: #F2F2F2,
+border: 0.5 solid #000000,
 
 
 /* password_text */
 
-position: absolute;
-width: 87px;
-height: 25px;
-left: 144px;
-top: 271px;
+position: 'absolute',
+width: 87,
+height: 25,
+left: 144,
+top: 271,
 
-font-family: Open Sans;
-font-style: normal;
-font-weight: bold;
-line-height: normal;
-font-size: 18px;
-text-align: center;
+fontFamily: 'Cochin',
+fontStyle: 'normal',
+fontWeight: 'bold',
+lineHeight: 'normal',
+fontSize: 18,
+textAlign: 'center',
 
-color: #F2F2F2;
-border: 0.5px solid #000000;
+color: #F2F2F2,
+border: 0.5 solid #000000,
 
 
 /* envelope_body */
 
-position: absolute;
-width: 25px;
-height: 18px;
-left: 52px;
-top: 230px;
+position: 'absolute',
+width: 25,
+height: 18,
+left: 52,
+top: 230,
 
-background: #F2F2F2;
-border: 1px solid #000000;
-box-sizing: border-box;
-border-radius: 2px;
+backgroundColor: #F2F2F2,
+border: 1 solid #000000,
+box-sizing: border-box,
+border-radius: 2,
 
 
 /* envelope_bottom_triangle */
 
-position: absolute;
-width: 30px;
-height: 15px;
-left: 50px;
-top: 236px;
+position: 'absolute',
+width: 30,
+height: 15,
+left: 50,
+top: 236,
 
-background: #F2F2F2;
-border: 1px solid #000000;
-box-sizing: border-box;
-border-radius: 1px;
+backgroundColor: #F2F2F2,
+border: 1 solid #000000,
+box-sizing: border-box,
+border-radius: 1,
 
 
 /* envelope_top_triangle */
 
-position: absolute;
-width: 30px;
-height: 13px;
-left: 50px;
-top: 240px;
+position: 'absolute',
+width: 30,
+height: 13,
+left: 50,
+top: 240,
 
-background: #F2F2F2;
-border: 1px solid #000000;
-box-sizing: border-box;
-border-radius: 1px;
-transform: matrix(1, 0, 0, -1, 0, 0);
+backgroundColor: #F2F2F2,
+border: 1 solid #000000,
+box-sizing: border-box,
+border-radius: 1,
+transform: matrix(1, 0, 0, -1, 0, 0),
 
 
 /* lock_top */
 
-position: absolute;
-width: 13px;
-height: 13px;
-left: 57px;
-top: 278px;
+position: 'absolute',
+width: 13,
+height: 13,
+left: 57,
+top: 278,
 
-background: #F2F2F2;
-border: 1px solid #000000;
-box-sizing: border-box;
+backgroundColor: #F2F2F2,
+border: 1 solid #000000,
+box-sizing: border-box,
 
 
 /* lock_body */
 
-position: absolute;
-width: 15px;
-height: 14px;
-left: 56px;
-top: 284px;
+position: 'absolute',
+width: 15,
+height: 14,
+left: 56,
+top: 284,
 
-background: #F2F2F2;
-border: 1px solid #000000;
-box-sizing: border-box;
-border-radius: 1px;
+backgroundColor: #F2F2F2,
+border: 1 solid #000000,
+box-sizing: border-box,
+border-radius: 1,
 
 
 /* confrim_password_line */
 
-position: absolute;
-width: 265.02px;
-height: 0px;
-left: 55.99px;
-top: 351.48px;
+position: 'absolute',
+width: 265.02,
+height: 0,
+left: 55.99,
+top: 351.48,
 
-border: 2px solid #2D9CDB;
+border: 2 solid #2D9CDB,
 
 
 /* confirm_password_text */
 
-position: absolute;
-width: 162px;
-height: 25px;
-left: 106px;
-top: 318px;
+position: 'absolute',
+width: 162,
+height: 25,
+left: 106,
+top: 318,
 
-font-family: Open Sans;
-font-style: normal;
-font-weight: bold;
-line-height: normal;
-font-size: 18px;
-text-align: center;
+fontFamily: 'Cochin',
+fontStyle: 'normal',
+fontWeight: 'bold',
+lineHeight: 'normal',
+fontSize: 18,
+textAlign: 'center',
 
-color: #F2F2F2;
-border: 0.5px solid #000000;
+color: #F2F2F2,
+border: 0.5 solid #000000,
 
 
 /* lock_top */
 
-position: absolute;
-width: 13px;
-height: 13px;
-left: 57px;
-top: 325px;
+position: 'absolute',
+width: 13,
+height: 13,
+left: 57,
+top: 325,
 
-background: #F2F2F2;
-border: 1px solid #000000;
-box-sizing: border-box;
+backgroundColor: #F2F2F2,
+border: 1 solid #000000,
+box-sizing: border-box,
 
 
 /* lock_body */
 
-position: absolute;
-width: 15px;
-height: 14px;
-left: 56px;
-top: 331px;
+position: 'absolute',
+width: 15,
+height: 14,
+left: 56,
+top: 331,
 
-background: #F2F2F2;
-border: 1px solid #000000;
-box-sizing: border-box;
-border-radius: 1px;
+backgroundColor: #F2F2F2,
+border: 1 solid #000000,
+box-sizing: border-box,
+border-radius: 1,
 
 
 /* person_body */
 
-position: absolute;
-width: 19.92px;
-height: 15px;
-left: 52.54px;
-top: 188px;
+position: 'absolute',
+width: 19.92,
+height: 15,
+left: 52.54,
+top: 188,
 
-background: #F2F2F2;
-border: 1px solid #000000;
-box-sizing: border-box;
-border-radius: 3px;
+backgroundColor: #F2F2F2,
+border: 1 solid #000000,
+box-sizing: border-box,
+border-radius: 3,
 
 
 /* person_head */
 
-position: absolute;
-width: 12px;
-height: 12px;
-left: 57px;
-top: 180px;
+position: 'absolute',
+width: 12,
+height: 12,
+left: 57,
+top: 180,
 
-background: #F2F2F2;
-border: 1px solid #000000;
-box-sizing: border-box;
+backgroundColor: #F2F2F2,
+border: 1 solid #000000,
+box-sizing: border-box,
 
 
 /* laundromat_rectangle */
 
-position: absolute;
-width: 139px;
-height: 45px;
-left: 37px;
-top: 426px;
+position: 'absolute',
+width: 139,
+height: 45,
+left: 37,
+top: 426,
 
-background: #2D9CDB;
-border-radius: 10px;
+backgroundColor: #2D9CDB,
+border-radius: 10,
 
 
 /* Search Laundromats */
 
-position: absolute;
-width: 115px;
-height: 25px;
-left: 48px;
-top: 435px;
+position: 'absolute',
+width: 115,
+height: 25,
+left: 48,
+top: 435,
 
-font-family: Open Sans;
-font-style: normal;
-font-weight: bold;
-line-height: normal;
-font-size: 14px;
-text-align: center;
+fontFamily: 'Cochin',
+fontStyle: 'normal',
+fontWeight: 'bold',
+lineHeight: 'normal',
+fontSize: 14,
+textAlign: 'center',
 
-color: #F2F2F2;
+color: #F2F2F2,
 
 
 /* laundromat_rectangle */
 
-position: absolute;
-width: 139px;
-height: 45px;
-left: 199px;
-top: 426px;
+position: 'absolute',
+width: 139,
+height: 45,
+left: 199,
+top: 426,
 
-background: #2D9CDB;
-border-radius: 10px;
+backgroundColor: #2D9CDB,
+border-radius: 10,
 
 
 /* Add Your Apartment */
 
-position: absolute;
-width: 115px;
-height: 25px;
-left: 210px;
-top: 435px;
+position: 'absolute',
+width: 115,
+height: 25,
+left: 210,
+top: 435,
 
-font-family: Open Sans;
-font-style: normal;
-font-weight: bold;
-line-height: normal;
-font-size: 14px;
-text-align: center;
+fontFamily: 'Cochin',
+fontStyle: 'normal',
+fontWeight: 'bold',
+lineHeight: 'normal',
+fontSize: 14,
+textAlign: 'center',
 
-color: #F2F2F2;
+color: #F2F2F2,
 
 
 /* < login */
 
-position: absolute;
-width: 50px;
-height: 14px;
-left: 6px;
-top: 29px;
+position: 'absolute',
+width: 50,
+height: 14,
+left: 6,
+top: 29,
 
-font-family: Open Sans;
-font-style: normal;
-font-weight: bold;
-line-height: normal;
-font-size: 14px;
-text-align: center;
+fontFamily: 'Cochin',
+fontStyle: 'normal',
+fontWeight: 'bold',
+lineHeight: 'normal',
+fontSize: 14,
+textAlign: 'center',
 
-color: #000000;
+color: #000000,
